# vkguide

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  imgui.ini
include/: vk_descriptors.h  vk_engine.h  vk_images.h  vk_initializers.h  vk_loader.h  vk_pipelines.h  vk_types.h  vk_utils.h
shaders/: Makefile.mk
shaders/include/: input_structures.glsl
shaders/src/: colored_mesh.vert  colored_triangle.frag  colored_triangle.vert  colored_triangle_mesh.frag  colored_triangle_mesh.vert  gradient.comp  gradient_color.comp  mesh.frag  mesh.vert  sky.comp  tex_image.frag
src/: vk_descriptors.cpp  vk_engine.cpp  vk_images.cpp  vk_initializers.cpp  vk_loader.cpp  vk_pipelines.cpp  vk_utils.cpp
utils/: Makefile.mk  bundler.cpp
